--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Node
+node_modules/
+.next/
+out/
+.env
+.env.local
+.env.production
+.env.development
+.DS_Store
+
+# Vercel
+.vercel/
