--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^3.1.3",
+    "@supabase/supabase-js": "^2.50.0",
     "framer-motion": "^12.16.0",
     "next": "15.3.3",
+    "notion-client": "^7.4.2",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-notion-x": "^7.4.2",
     "react-tsparticles": "^2.12.2",
+    "resend": "^4.5.2",
     "tsparticles-basic": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0"
@@ -21,6 +27,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.0.0",
+    "@types/react": "19.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4"
