--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "19.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "path": "^0.12.7",
     "tailwindcss": "^4"
   }
 }
